Fix article tags and categories alignment
Fixes #150

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -122,11 +122,15 @@ article
   .tag-link
     &:before
       content: "#"
+    underline(10px, $color-link)
 
+.article-category
+  .category-link
     underline(10px, $color-link)
 
 @media (min-width: 480px)
-  .article-tag
+  .article-tag,
+  .article-category
     display: inline
 
     &:before
